bootstrap/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/part-of: shared-infra
    app.kubernetes.io/name: argocd
